# clean-jdr

./: 404.html  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: build.yaml  release.yaml
examples/: __init__.py
search/: search_index.json
src/clean_jdr/: __init__.py  __main__.py  cleaner.py
src/developer/: index.html
src/reference/: index.html
src/user/: index.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
